--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-html-validation": "~0.1.13",
     "grunt-jekyll": "~0.4.1",
+    "grunt-jscs-checker": "~0.4.0",
     "grunt-sed": "~0.1.1",
     "load-grunt-tasks": "~0.4.0"
   }
